styles.css
body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 100px;
}

#game-board {
    display: grid;
    grid-template-columns: repeat(3, 100px);
    grid-template-rows: repeat(3, 100px);

    gap: 15px;
}

.cell-button {
    font-weight: bold;
    font-size: 75px;
}

#announcer {
    margin-top: 25px;
    font-size: 30px;

    font-family:Arial, Helvetica, sans-serif;
}

#new-game-button {
    margin-top: 25px;
    font-size: 25px;

    padding: 4px 8px;
}

#game-over-screen {
    background: rgba(0,0,0,0.1);

    position: absolute;
    top: 0;
    left: 0;
    width: 345px;
    height: 345px;
}

